tweaked the links to point back to the main site

--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
                             </div>
                             <div id='innerText96__Text96_Text8760' data-id='innerText96' style='border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText96 text_editor_resets' >
                                 <div  class='docs-buttons'>
-                                    <p class="Buttons-White ospfxw4740379de710b82c6a7908a90be9d680ossfx"><a class="Buttons-White" href="/docs/quickstarts">Show me the code</a></p>
+                                    <p class="Buttons-White ospfxw4740379de710b82c6a7908a90be9d680ossfx"><a class="Buttons-White" href="http://clarify.io/docs/quickstarts">Show me the code</a></p>
                                 </div>
                                 <div class='text_caption_background' style='background-color:#549FAD;opacity:1;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;position:absolute;left:0;bottom:0;top:0;right:0;z-index:-1;'></div>
                             </div>
                             <div id='innerText97__Text97_Text188200' data-id='innerText97' style='border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText97 text_editor_resets' >
                                 <div  class='docs-buttons'>
-                                    <p class="Buttons-White ospfxwf505af26e9bc06f7c870c20a5370af82ossfx"><a class="Buttons-White" href="/docs/libraries">Download now</a></p>
+                                    <p class="Buttons-White ospfxwf505af26e9bc06f7c870c20a5370af82ossfx"><a class="Buttons-White" href="http://clarify.io/docs/libraries">Download now</a></p>
                                 </div>
                                 <div class='text_caption_background' style='background-color:#549FAD;opacity:1;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;position:absolute;left:0;bottom:0;top:0;right:0;z-index:-1;'></div>
                             </div>
                             <div id='innerText98__Text98_Text1240' data-id='innerText98' style='border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;' data-type="text" class='inner_text innerText98 text_editor_resets' >
                                 <div  class='docs-buttons'>
-                                    <p class="Buttons-White ospfxwc5397fb6da7645d6c20e493a884f4017ossfx"><a class="Buttons-White" href="/docs/api">API Documentation</a></p>
+                                    <p class="Buttons-White ospfxwc5397fb6da7645d6c20e493a884f4017ossfx"><a class="Buttons-White" href="http://clarify.io/docs/api">API Documentation</a></p>
                                 </div>
                                 <div class='text_caption_background' style='background-color:#549FAD;opacity:1;border-radius:0px;-moz-border-radiu:0px;border-top-left-radius:0px;-moz-border-radius-topleft:0px;border-top-right-radius:0px;-moz-border-radius-topright:0px;border-bottom-right-radius:0px;-moz-border-radius-bottomright:0px;border-bottom-left-radius:0px;-moz-border-radius-bottomleft:0px;position:absolute;left:0;bottom:0;top:0;right:0;z-index:-1;'></div>
                             </div>
