--- a/quickstarts/multi-language-support.html
+++ b/quickstarts/multi-language-support.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: quickstart
 title: Clarify - Multi-language Support Quickstart
 ---
 
@@ -13,66 +13,106 @@ title: Clarify - Multi-language Support Quickstart
                 <pre crayon="false"><strong>Note:</strong> Please contact us at <a href="mailto:support@clarify.io">support@clarify.io</a> to add languages beyond English.</pre>
                 <h3>Configuring Your Environment</h3>
                 <p>While you can use any programming language you choose, we provide a few <a href="https://github.com/Clarify" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify', 'helper libraries']);" >helper libraries</a> to get you started. In most cases, you can use your favorite package manager:</p>
-                <div class="responsive-tabs">
-                    <h2 class="tabtitle">PHP</h2>
-                    <div class="tabcontent">
 
-                        <p>In PHP, you simply install the Clarify SDK using Composer:</p>
-                        <style>.gist table { margin-bottom: 0; }</style>
-                        <p><script src="https://gist.github.com/caseysoftware/d76fe9c40fe8698b5409.js"></script></p>
-                        <p>And then simply run:</p>
-                        <pre crayon="false">composer install</pre>
+                <div id="setup-tabs">
+                    <ul class="resp-tabs-list setup-tabs">
+                        <li>PHP</li>
+                        <li>Java</li>
+                        <li>Python</li>
+                        <li>Ruby</li>
+                        <li>curl</li>
+                    </ul>
+                    <div class="resp-tabs-container setup-tabs">
+                        <div>
+                            <p>In PHP, you simply install the Clarify SDK using Composer:</p>
+                            <script src="https://gist.github.com/caseysoftware/d76fe9c40fe8698b5409.js"></script>
+                            <p>And then simply run:</p>
+                            <pre crayon="false">composer install</pre>
+                        </div>
+                        <div>
+                            <p>In Java, you simply install the Clarify SDK via your Maven pom.xml:</p>
+                            <script src="https://gist.github.com/caseysoftware/8d6c09439935c667abec.js"></script>
+                        </div>
+                        <div>
+                            <p>In Python, you simply install the Clarify module via pip:</p>
+                            <script src="https://gist.github.com/caseysoftware/fff90c0ec4ab9c1da2dc.js"></script>
+                        </div>
+                        <div>
+                            <p>In Ruby, you simply install the Clarify gem and set your API key as an environment variable:</p>
+                            <script src="https://gist.github.com/caseysoftware/8c05de89ea29d1e12b17.js"></script>
+                        </div>
+                        <div>
+                            <p>Although we don&#8217;t have a curl library, the command-line JSON parser &#8220;jq&#8221; is super helpful. Download it and install it to get started: <a href="http://stedolan.github.io/jq/" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'http://stedolan.github.io/jq/', 'http://stedolan.github.io/jq/']);" >http://stedolan.github.io/jq/</a></p>
+                        </div>
+                    </div>
+                </div>
 
-                    </div><h2 class="tabtitle">Java</h2>
-                    <div class="tabcontent">
-
-                        <p>In Java, you simply install the Clarify SDK via your Maven pom.xml:</p>
-                        <style>.gist table { margin-bottom: 0; }</style>
-                        <p><script src="https://gist.github.com/caseysoftware/8d6c09439935c667abec.js"></script></p>
-
-                    </div><h2 class="tabtitle">Python</h2>
-                    <div class="tabcontent">
-
-                        <p>In Python, you simply install the Clarify module via pip:</p>
-                        <style>.gist table { margin-bottom: 0; }</style>
-                        <p><script src="https://gist.github.com/caseysoftware/fff90c0ec4ab9c1da2dc.js"></script></p>
-
-                    </div><h2 class="tabtitle">Ruby</h2>
-                    <div class="tabcontent">
-
-                        <p>In Ruby, you simply install the Clarify gem and set your API key as an environment variable:</p>
-                        <style>.gist table { margin-bottom: 0; }</style>
-                        <p><script src="https://gist.github.com/caseysoftware/8c05de89ea29d1e12b17.js"></script></p>
-
-                    </div><h2 class="tabtitle">curl</h2>
-                    <div class="tabcontent">
-
-                        <p>Although we don&#8217;t have a curl library, the command-line JSON parser &#8220;jq&#8221; is super helpful. Download it and install it to get started: <a href="http://stedolan.github.io/jq/" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'http://stedolan.github.io/jq/', 'http://stedolan.github.io/jq/']);" >http://stedolan.github.io/jq/</a></p>
-                    </div></div>
                 <h3>Loading Audio by Language</h3>
                 <p>Our system needs to know what language your media is in so we can analyze everything properly. You can do this with a single command:</p>
-                <div class="responsive-tabs">
-                    <h2 class="tabtitle">curl</h2>
-                    <div class="tabcontent">
 
-                        <p>Using curl, you have to make two requests. First, you create a bundle without media and then you add a track to it specifying the language. Here&#8217;s a sample:</p>
-                        <style>.gist table { margin-bottom: 0; }</style>
-                        <p><script src="https://gist.github.com/caseysoftware/be75256f8f600baf0219.js"></script></p>
-                    </div></div>
+                <div id="language-tabs">
+                    <ul class="resp-tabs-list language-tabs">
+                        <li>curl</li>
+                    </ul>
+                    <div class="resp-tabs-container language-tabs">
+                        <div>
+                            <p>Using curl, you have to make two requests. First, you create a bundle without media and then you add a track to it specifying the language. Here&#8217;s a sample:</p>
+                            <script src="https://gist.github.com/caseysoftware/be75256f8f600baf0219.js"></script>
+                        </div>
+                    </div>
+                </div>
+
                 <p>Naming the bundle and providing a notify_url are both optional. We have a number of audio and video files available for processing on <a href="http://clarify.io/media">our Media Page</a>.</p>
                 <p><em><strong>Hint:</strong> You don&#8217;t have to download these files. Instead you can pass us these urls via the create method shown above.</em></p>
                 <h3>Searching Media by Language</h3>
                 <p>To search, you use the same object you created before and can search using your keywords. The only change is that you have to specify the language of the term you&#8217;re seeking. This is done with a single command:</p>
-                <div class="responsive-tabs">
-                    <h2 class="tabtitle">curl</h2>
-                    <div class="tabcontent">
 
-                        <p>Using curl, you simply add the parameter &#8220;language&#8221; to your request:</p>
-                        <style>.gist table { margin-bottom: 0; }</style>
-                        <p><script src="https://gist.github.com/caseysoftware/903bb5d97c6d25d1f27b.js"></script></p>
-                    </div></div>
+                <div id="language-search-tabs">
+                    <ul class="resp-tabs-list language-search-tabs">
+                        <li>curl</li>
+                    </ul>
+                    <div class="resp-tabs-container language-search-tabs">
+                        <div>
+                            <p>Using curl, you simply add the parameter &#8220;language&#8221; to your request:</p>
+                            <script src="https://gist.github.com/caseysoftware/903bb5d97c6d25d1f27b.js"></script>
+                        </div>
+                    </div>
+                </div>
+
                 <p>From here on, the data structures, and data formats are completely the same as in the English-based search. Now you can dive into our regular <a href="http://clarify.io/docs/quickstarts/media-search/">Media Search Quickstart</a> to display the results in the Clarify <a href="https://github.com/Clarify/clarify-audio-player" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify/clarify-audio-player', 'audio player']);" >audio player</a> or <a href="https://github.com/Clarify/clarify-video-player" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify/clarify-video-player', 'video player']);" >video player</a>.</p>
             </div><!-- .entry-content -->
         </article><!-- #post -->
     </div><!-- #content -->
 </div>
+
+<script>
+    $(document).ready(function() {
+        $('#setup-tabs').easyResponsiveTabs({
+            tabidentify: 'setup-tabs', // The tab groups identifier
+            activetab_bg: '#fff', // background color for active tabs in this group
+            inactive_bg: '#F5F5F5', // background color for inactive tabs in this group
+            active_border_color: '#c1c1c1', // border color for active tabs heads in this group
+            active_content_border_color: '#5AB1D0' // border color for active tabs contect in this group so that it matches the tab head border
+        });
+    });
+
+    $(document).ready(function() {
+        $('#language-tabs').easyResponsiveTabs({
+            tabidentify: 'language-tabs', // The tab groups identifier
+            activetab_bg: '#fff', // background color for active tabs in this group
+            inactive_bg: '#F5F5F5', // background color for inactive tabs in this group
+            active_border_color: '#c1c1c1', // border color for active tabs heads in this group
+            active_content_border_color: '#5AB1D0' // border color for active tabs contect in this group so that it matches the tab head border
+        });
+    });
+
+    $(document).ready(function() {
+        $('#language-search-tabs').easyResponsiveTabs({
+            tabidentify: 'language-search-tabs', // The tab groups identifier
+            activetab_bg: '#fff', // background color for active tabs in this group
+            inactive_bg: '#F5F5F5', // background color for inactive tabs in this group
+            active_border_color: '#c1c1c1', // border color for active tabs heads in this group
+            active_content_border_color: '#5AB1D0' // border color for active tabs contect in this group so that it matches the tab head border
+        });
+    });
+</script>
