moving the sections around

--- a/quickstarts/multi-language-support.html
+++ b/quickstarts/multi-language-support.html
@@ -15,7 +15,7 @@ title: Clarify - Multi-language Support Quickstart
                 <h3>Configuring Your Environment</h3>
                 <p>While you can use any programming language you choose, we provide a few <a href="https://github.com/Clarify" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify', 'helper libraries']);" >helper libraries</a> to get you started. In most cases, you can use your favorite package manager:</p>
 
-                {% include /tab-sections/setup.html %}
+                {% include /sections/setup.html %}
 
                 <h3>Loading Audio by Language</h3>
                 <p>Our system needs to know what language your media is in so we can analyze everything properly. You can do this with a single command:</p>
