--- a/quickstarts/media-search.html
+++ b/quickstarts/media-search.html
@@ -1,6 +1,13 @@
 ---
 layout: quickstart
 title: Clarify - Media Search Quickstart
+
+languages:
+    - PHP
+    - Java
+    - Python
+    - Ruby
+    - curl
 ---
 
 <div id="primary" class="content-area">
@@ -10,66 +17,15 @@ title: Clarify - Media Search Quickstart
 
                 <h3>Getting Started with Media Search</h3>
                 <p>This quickstart demonstrates a simple way to get started using the Clarify API. Following these steps, it should take you no more than 5-10 minutes to have a fully functional search for your audio.</p>
-                <h3>Configuring Your Environment</h3>
-                <p>While you can use any programming language you choose, we provide a few <a href="https://github.com/Clarify" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify', 'helper libraries']);" >helper libraries</a> to get you started. In most cases, you can use your favorite package manager:</p>
 
-                {% include /tab-sections/setup.html %}
+                {% include /sections/setup.html %}
 
-                <h3>Loading Audio</h3>
-                <p>First include the SDK and create your object using your API Key. Once you&#8217;ve created the object, you can use the object to load each of your audio files as shown:</p>
+                {% include /sections/media-loading.html %}
 
-                {% include /tab-sections/media-loading.html %}
+                {% include /sections/media-searching.html %}
 
-                <p>Naming the bundle and providing a notify_url are both optional. We have a number of audio and video files available for processing on <a href="http://clarify.io/media">our Media Page</a>.</p>
-                <p><em><strong>Hint:</strong> You don&#8217;t have to download these files. Instead you can pass us these urls via the create method shown above.</em></p>
-
-                <h3>Searching Audio</h3>
-                <p><em><strong>Note:</strong> While we process files as we receive them, there will be a delay before your file is available for searching. This is normally 1 minute for every minute of audio/video.</em></p>
-                <p>To search, you use the same object you created before and just search using your keywords. If you uploaded the “Wizard of Oz” audio clip, you can search for “dorothy”. Then you can process and interact the results however you wish.</p>
-                <p>The code below simply shows the resulting bundle id, bundle name, and the start/end offsets for each occurrence of the search terms:</p>
-
-                {% include /tab-sections/media-searching.html %}
-
-                <p>And here are the results using the Wizard of Oz clip we loaded:</p>
-
-<pre>/v1/audio/8ee0e56929c248ba895d19ead47c9993
-Dorothy and the Wizard of Oz
-2.35 -- 2.59
-172.49 -- 172.83
-224.82 -- 225.08
-271.49 -- 271.8
-329.1 -- 329.31
-480.45 -- 480.92</pre>
-
-                <h3>Putting it All Together</h3>
-                <p>From here, we can visualize our search results with our included <a href="https://github.com/Clarify/clarify-audio-player" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify/clarify-audio-player', 'audio player']);" >audio player</a>. The player should work with minimal additional configuration, but the bulk of the logic is already above in the results.</p>
-
-                <div id="player-tabs">
-                    <ul class="resp-tabs-list player-tabs">
-                        <li>PHP</li>
-                        <li>Python</li>
-                    </ul>
-                    <div class="resp-tabs-container player-tabs">
-                        <div>
-                            <script src="https://gist.github.com/caseysoftware/61b7ba71d82def9cbbfc.js"></script>
-                        </div>
-                        <div>
-                            <script src="https://gist.github.com/caseysoftware/50c11c58b65d5127eae6.js"></script>
-                        </div>
-                    </div>
-                </div>
+                {% include /sections/media-playing.html %}
             </div>
         </article>
     </div>
 </div>
-<script>
-    $(document).ready(function() {
-        $('#player-tabs').easyResponsiveTabs({
-            tabidentify: 'player-tabs', // The tab groups identifier
-            activetab_bg: '#fff', // background color for active tabs in this group
-            inactive_bg: '#F5F5F5', // background color for inactive tabs in this group
-            active_border_color: '#c1c1c1', // border color for active tabs heads in this group
-            active_content_border_color: '#5AB1D0' // border color for active tabs contect in this group so that it matches the tab head border
-        });
-    });
-</script>
