wiring in the samples

--- a/quickstarts/keyword-insight.html
+++ b/quickstarts/keyword-insight.html
@@ -1,6 +1,9 @@
 ---
 layout: quickstart
 title: Clarify - Keyword Insight Quickstart
+
+languages:
+- curl
 ---
 
 <div id="primary" class="content-area">
