--- a/quickstarts/multi-language-support.html
+++ b/quickstarts/multi-language-support.html
@@ -1,6 +1,9 @@
 ---
 layout: quickstart
 title: Clarify - Multi-language Support Quickstart
+
+languages:
+- curl
 ---
 
 <div id="primary" class="content-area">
