--- a/quickstarts/index.html
+++ b/quickstarts/index.html
@@ -3,7 +3,7 @@ layout: quickstart
 title: Quickstart Guides
 ---
 
-<p>These quickstarts are designed to get you started with the Clarify API quickly. Following these steps, it should take you no more than 5-10 minutes to have a fully functional search for your audio or video.</p>
+<p>These quickstarts are designed to get you started with the Clarify API quickly. With the exception of Human Transcripts, any of these quickstarts should take you 5-10 minutes to fully implement.</p>
 
 <h3>Media Search</h3>
 <div class="quickstart button"><a href="/quickstarts/media-search.html">See the Code »</a></div>
