language consistency tweaks

--- a/quickstarts/multi-language-support.html
+++ b/quickstarts/multi-language-support.html
@@ -1,12 +1,12 @@
 ---
 layout: quickstart
-title: Using Multi-Language Media Search
+title: Using Multi-Language Media Support
 
 languages:
 - curl
 ---
 
-<p>This quickstart demonstrates a simple way to get started using the Clarify API. Following these steps, it should take you no more than 5-10 minutes to support search in a variety of languages.</p>
+<p>This quickstart demonstrates a simple way to get started using the Clarify API in a variety of languages. Following these steps, it should take you no more than 5-10 minutes to have search in our supported languages.</p>
 
 {% include /sections/_contact-support.html %}
 
