--- a/quickstarts/index.html
+++ b/quickstarts/index.html
@@ -9,7 +9,7 @@ title: Quickstart Guides
 <div class="quickstart button"><a href="/quickstarts/media-search.html">See the Code »</a></div>
 <p>The Media Search Quickstart gives you code to get started. The code samples walk you through getting a helper library, loading your first audio file, searching for a few keywords, and exploring the results.</p>
 
-<h3>Multi-language Search</h3>
+<h3>Multi-language Support</h3>
 <div class="quickstart button"><a href="/quickstarts/multi-language-support.html">See the Code »</a></div>
 <p>The Multi-Language Search Quickstart demonstrates how to get started with multiple languages. The included code walks you through getting a helper library, loading a French language file, searching for a French keywords, and exploring the results.</p>
 
