deploying the last of the docs

--- a/quickstarts/multi-language-support.html
+++ b/quickstarts/multi-language-support.html
@@ -14,6 +14,8 @@ languages:
 
 {% include /sections/multi-language-loading.html %}
 
+{% include /sections/multi-language-classification.html %}
+
 {% include /sections/multi-language-searching.html %}
 
 {% include /sections/media-playing.html %}
