fleshed out the Topics API calls: - added the quickstart - added the data formats - showed simple jq formulas in action

--- a/quickstarts/index.html
+++ b/quickstarts/index.html
@@ -7,11 +7,11 @@ title: Quickstart Guides
 
 <h3>Media Search</h3>
 <div class="quickstart button"><a href="/quickstarts/media-search.html">See the Code »</a></div>
-<p>The Media Search Quickstart gives you code to get started. The code samples walk you through getting a helper library, loading your first audio file, searching for a few keywords, and exploring the results.</p>
+<p>The Media Search Quickstart demonstates how to get started. The code samples walk you through getting a helper library, loading your first audio file, searching for a few keywords, and exploring the results.</p>
 
 <h3>Multi-language Support</h3>
 <div class="quickstart button"><a href="/quickstarts/multi-language-support.html">See the Code »</a></div>
-<p>The Multi-Language Search Quickstart demonstrates how to get started with multiple languages. The included code walks you through getting a helper library, loading a French language file, searching for a French keywords, and exploring the results.</p>
+<p>The Multi-Language Quickstart demonstrates how to get started with multiple languages. The included code walks you through getting a helper library, loading a French media file, searching for a French terms, and exploring the results.</p>
 
 <h3>Human Transcripts</h3>
 <div class="quickstart button"><a href="/quickstarts/human-transcripts.html">See the Code »</a></div>
@@ -19,4 +19,8 @@ title: Quickstart Guides
 
 <h3>Keywords Insight</h3>
 <div class="quickstart button"><a href="/quickstarts/keyword-insight.html">See the Code »</a></div>
-<p>The Keyword Insight Quickstart demonstrates how to quickly extract the most frequently said words from any audio or video file. The code samples walk you through getting a helper library, loading your audio file, requesting the keywords, and receiving the results.</p>
+<p>The Keyword Insight Quickstart demonstrates how to quickly extract the most frequently said words from any audio or video file. The code samples walk you through getting a helper library, loading your audio/video file, requesting the keywords, and receiving the results.</p>
+
+<h3>Topics Insight</h3>
+<div class="quickstart button"><a href="/quickstarts/topics-insight.html">See the Code »</a></div>
+<p>The Topics Insight Quickstart demonstrates how to quickly extract the important topics from any audio or video file. The code samples walk you through getting a helper library, loading your audio/video file, requesting the topics, and receiving the results.</p>
