extracting the beta/invite messages
instead of having all the notes embedded in the quoickstarts, this will
let us have all the messages managed via the front matter

--- a/quickstarts/multi-language-support.html
+++ b/quickstarts/multi-language-support.html
@@ -4,11 +4,13 @@ title: Using Multi-Language Media Support
 
 languages:
 - curl
+
+status: invite
 ---
 
 <p>This quickstart demonstrates a simple way to get started using the Clarify API in a variety of languages. Following these steps, it should take you no more than 5-10 minutes to have search in our supported languages.</p>
 
-{% include /sections/_contact-support.html %}
+{% include /message-invite.html %}
 
 {% include /sections/setup.html %}
 
