--- a/quickstarts/topics-insight.html
+++ b/quickstarts/topics-insight.html
@@ -4,9 +4,13 @@ title: Getting your Topics
 
 languages:
 - curl
+
+status: beta
 ---
 
 <p>This quickstart demonstrates how to load an audio or video file and request your topics in a few minutes.</p>
+
+{% include /message-beta.html %}
 
 {% include /sections/setup.html %}
 
