converted the quick start nav to use a collection

--- a/_quickstarts/keyword-insight.html
+++ b/_quickstarts/keyword-insight.html
@@ -1,9 +1,12 @@
 ---
 layout: quickstart
-title: Getting your Spoken keywords
+title: Getting your Spoken Keywords
+navtitle: Keywords Insight
 
 languages:
 - curl
+
+order: 3
 ---
 
 <p>This quickstart demonstrates how to load an audio file and request your spoken keywords in just a matter of minutes.</p>
