--- a/_quickstarts/multi-language-support.html
+++ b/_quickstarts/multi-language-support.html
@@ -1,10 +1,12 @@
 ---
 layout: quickstart
 title: Using Multi-Language Media Support
+navtitle: Multi-Language Support
 
 languages:
 - curl
 
+order: 2
 status: invite
 ---
 
