--- a/_quickstarts/topics-insight.html
+++ b/_quickstarts/topics-insight.html
@@ -1,10 +1,12 @@
 ---
 layout: quickstart
 title: Getting your Topics
+navtitle: Topics Insight
 
 languages:
 - curl
 
+order: 4
 status: beta
 ---
 
