--- a/_quickstarts/media-search.html
+++ b/_quickstarts/media-search.html
@@ -1,6 +1,7 @@
 ---
 layout: quickstart
 title: Getting Started with Media Search
+navtitle: Media Search
 
 languages:
 - curl
@@ -8,6 +9,8 @@ languages:
 - Java
 - Python
 - Ruby
+
+order: 1
 ---
 
 <p>This quickstart demonstrates a simple way to get started using the Clarify API. Following these steps, it should take you no more than 5-10 minutes to have a fully functional search for your audio.</p>
