cleaning up how things are named

--- a/_quickstarts/insights-keywords.html
+++ b/_quickstarts/insights-keywords.html
@@ -1,6 +1,6 @@
 ---
 layout: quickstart
-title: Getting your Spoken Keywords
+title: Getting your Keywords
 navtitle: Keywords Insight
 
 languages:
