--- a/_quickstarts/media-search.html
+++ b/_quickstarts/media-search.html
@@ -13,7 +13,7 @@ languages:
 order: 1
 ---
 
-<p>This quickstart demonstrates a simple way to get started using the Clarify API. Following these steps, it should take you no more than 5-10 minutes to have a fully functional search for your audio.</p>
+This quickstart demonstrates a simple way to get started using the Clarify API. Following these steps, it should take you no more than 5-10 minutes to have a fully functional search for your audio.
 
 {% include /sections/setup.html %}
 
