--- a/_quickstarts/multi-language-support.html
+++ b/_quickstarts/multi-language-support.html
@@ -10,7 +10,7 @@ order: 2
 status: invite
 ---
 
-<p>This quickstart demonstrates a simple way to get started using the Clarify API in a variety of languages. Following these steps, it should take you no more than 5-10 minutes to have search in our supported languages.</p>
+This quickstart demonstrates a simple way to get started using the Clarify API in a variety of languages. Following these steps, it should take you no more than 5-10 minutes to have search in our supported languages.
 
 {% include /sections/setup.html %}
 
