--- a/_quickstarts/insights-topics.html
+++ b/_quickstarts/insights-topics.html
@@ -10,38 +10,38 @@ order: 4
 status: beta
 ---
 
-<p>This quickstart demonstrates how to load an audio or video file and request your topics in a few minutes.</p>
+This quickstart demonstrates how to load an audio or video file and request your topics in a few minutes.
 
 {% include /sections/setup.html %}
 
 {% include /sections/media-loading.html %}
 
-<p>After creating a bundle, you'll receive a response which looks something like this:</p>
+After creating a bundle, you'll receive a response which looks something like this:
 
 {% include /source/json/bundle_callback.md %}
 
 <h3>Getting your Topics</h3>
 
-<p>The most important part of the bundle notification is the &#8216;href' of the &#8216;clarify:insights' key. By retrieving the contents of that URI, Clarify will give you a list of the Insights available.</p>
+The most important part of the bundle notification is the &#8216;href' of the &#8216;clarify:insights' key. By retrieving the contents of that URI, Clarify will give you a list of the Insights available.
 
 {% include /sections/insight-links.html %}
 
-<p>This will return with the list of available insights:</p>
+This will return with the list of available insights:
 
 {% include /source/json/insights_r4.md %}
 
-<p>The most important part of this payload is the <strong>href</strong> of the <strong>insight:spoken_topics</strong> key. By retrieving the contents of that URI, Clarify will give you the topics recognized from the audio.</p>
+The most important part of this payload is the <strong>href</strong> of the <strong>insight:spoken_topics</strong> key. By retrieving the contents of that URI, Clarify will give you the topics recognized from the audio.
 
 {% include /sections/request-topics.html %}
 
-<p>The final result of which is our list of topics:</p>
+The final result of which is our list of topics:
 
 {% include /source/json/insights_topics.md %}
 
-<p>From here, we can process the topics just like any other json array:</p>
+From here, we can process the topics just like any other json array:
 
 {% include /sections/process-topics.html %}
 
-<p>And we end up with a list of topics that we can use to categorize or otherwise sort our content for better understanding:</p>
+And we end up with a list of topics that we can use to categorize or otherwise sort our content for better understanding:
 
 {% include /source/json/processed_topics.md %}
