--- a/quickstarts/index.html
+++ b/quickstarts/index.html
@@ -3,24 +3,29 @@ layout: quickstart
 title: Quickstart Guides
 ---
 
-<p>These quickstarts are designed to get you started with the Clarify API quickly. With the exception of Human Transcripts, any of these quickstarts should take you 5-10 minutes to fully implement.</p>
+These quickstarts are designed to get you started with the Clarify API quickly. With the exception of Human Transcripts, any of these quickstarts should take you 5-10 minutes to fully implement.
 
 <h3>Media Search</h3>
 <div class="quickstart button"><a href="/quickstarts/media-search.html">See the Code »</a></div>
-<p>The Media Search Quickstart demonstates how to get started. The code samples walk you through getting a helper library, loading your first audio file, searching for a few keywords, and exploring the results.</p>
+
+The Media Search Quickstart demonstates how to get started. The code samples walk you through getting a helper library, loading your first audio file, searching for a few keywords, and exploring the results.
 
 <h3>Multi-language Support</h3>
 <div class="quickstart button"><a href="/quickstarts/multi-language-support.html">See the Code »</a></div>
-<p>The Multi-Language Quickstart demonstrates how to get started with multiple languages. The included code walks you through getting a helper library, loading a French media file, searching for a French terms, and exploring the results.</p>
+
+The Multi-Language Quickstart demonstrates how to get started with multiple languages. The included code walks you through getting a helper library, loading a French media file, searching for a French terms, and exploring the results.
 
 <h3>Human Transcripts</h3>
 <div class="quickstart button"><a href="/quickstarts/human-transcripts.html">See the Code »</a></div>
-<p>The Human Transcript Quickstart demonstrates how to take any English language audio and get a transcript. The code samples walk you through getting a helper library, loading your audio file, requesting the transcript, and receiving the results.</p>
+
+The Human Transcript Quickstart demonstrates how to take any English language audio and get a transcript. The code samples walk you through getting a helper library, loading your audio file, requesting the transcript, and receiving the results.
 
 <h3>Keywords Insight</h3>
 <div class="quickstart button"><a href="/quickstarts/keyword-insight.html">See the Code »</a></div>
-<p>The Keyword Insight Quickstart demonstrates how to quickly extract the most frequently said words from any audio or video file. The code samples walk you through getting a helper library, loading your audio/video file, requesting the keywords, and receiving the results.</p>
+
+The Keyword Insight Quickstart demonstrates how to quickly extract the most frequently said words from any audio or video file. The code samples walk you through getting set up, loading your audio/video, requesting keywords, and receiving the results.
 
 <h3>Topics Insight</h3>
 <div class="quickstart button"><a href="/quickstarts/topics-insight.html">See the Code »</a></div>
-<p>The Topics Insight Quickstart demonstrates how to quickly extract the important topics from any audio or video file. The code samples walk you through getting a helper library, loading your audio/video file, requesting the topics, and receiving the results.</p>
+
+The Topics Insight Quickstart demonstrates how to quickly extract the important topics from any audio or video file. The code samples walk you through getting set up, loading your audio/video, requesting topics, and receiving the results.
