collapsing more of the duplicated sections

--- a/_quickstarts/insights-keywords.html
+++ b/_quickstarts/insights-keywords.html
@@ -15,23 +15,27 @@ This quickstart demonstrates how to load an audio file and request your spoken k
 
 {% include /sections/media-loading.html %}
 
-After creating a bundle, you'll receive a response which looks something like this:
+{% assign tabs="insight-links" %}
 
-{% include /source/json/bundle_callback.md %}
+<a name="{{ tabs }}"></a>
 
 <h3>Getting your Keywords</h3>
 
-The most important part of the bundle notification is the &#8216;href' of the &#8216;clarify:insights' key. By retrieving the contents of that URI, Clarify will give you a list of the Insights available.
+The most important part of the bundle notification is the 'href' of the 'clarify:insights' key. By retrieving the contents of that URI, Clarify will give you a list of the Insights available.
 
-{% include /sections/insight-links.html %}
+{% include /structural/tabs.html %}
 
 This will return with the list of available insights:
 
 {% include /source/json/insights_r4.md %}
 
+{% assign tabs="keyword-request" %}
+
+<a name="{{ tabs }}"></a>
+
 The most important part of this payload is the 'href' of the 'insight:spoken_keywords' key. By retrieving the contents of that URI, Clarify will give you the top 20 keywords recognized from the audio.
 
-{% include /sections/keyword-request.html %}
+{% include /structural/tabs.html %}
 
 The final result of which is our list of keywords:
 
