making the filenames more consistent/predictable

--- a/_quickstarts/insights-keywords.html
+++ b/_quickstarts/insights-keywords.html
@@ -29,7 +29,7 @@ This will return with the list of available insights:
 
 {% include /source/json/insights_r4.md %}
 
-{% assign tabs="keyword-request" %}
+{% assign tabs="request-keywords" %}
 
 <a name="{{ tabs }}"></a>
 
