--- a/_quickstarts/insights-keywords.html
+++ b/_quickstarts/insights-keywords.html
@@ -15,7 +15,7 @@ This quickstart demonstrates how to load an audio file and request your spoken k
 
 {% include /sections/media-loading.html %}
 
-{% assign tabs="insight-links" %}
+{% assign tabs="request-insights" %}
 
 <a name="{{ tabs }}"></a>
 
