--- a/_quickstarts/insights-topics.html
+++ b/_quickstarts/insights-topics.html
@@ -16,7 +16,7 @@ This quickstart demonstrates how to load an audio or video file and request your
 
 {% include /sections/media-loading.html %}
 
-{% assign tabs="insight-links" %}
+{% assign tabs="request-insights" %}
 
 <a name="{{ tabs }}"></a>
 
