--- a/_quickstarts/insights-keywords.html
+++ b/_quickstarts/insights-keywords.html
@@ -21,7 +21,7 @@ This quickstart demonstrates how to load an audio file and request your spoken k
 
 <h3>Getting your Keywords</h3>
 
-The most important part of the bundle notification is the 'href' of the 'clarify:insights' key. By retrieving the contents of that URI, Clarify will give you a list of the Insights available.
+The most important part of the bundle notification is the <code>href</code> of the <code>clarify:insights</code> key. By retrieving the contents of that URI, Clarify will give you a list of the Insights available.
 
 {% include /structural/tabs.html %}
 
@@ -33,7 +33,7 @@ This will return with the list of available insights:
 
 <a name="{{ tabs }}"></a>
 
-The most important part of this payload is the 'href' of the 'insight:spoken_keywords' key. By retrieving the contents of that URI, Clarify will give you the top 20 keywords recognized from the audio.
+The most important part of this payload is the <code>href</code> of the <code>insight:spoken_keywords</code> key. By retrieving the contents of that URI, Clarify will give you the top 20 keywords recognized from the audio.
 
 {% include /structural/tabs.html %}
 
