--- a/_quickstarts/insights-topics.html
+++ b/_quickstarts/insights-topics.html
@@ -22,7 +22,7 @@ This quickstart demonstrates how to load an audio or video file and request your
 
 <h3>Getting your Topics</h3>
 
-The most important part of the bundle notification is the 'href' of the 'clarify:insights' key. By retrieving the contents of that URI, Clarify will give you a list of the Insights available.
+The most important part of the bundle notification is the <code>href</code> of the <code>clarify:insights</code> key. By retrieving the contents of that URI, Clarify will give you a list of the Insights available.
 
 {% include /structural/tabs.html %}
 
@@ -30,7 +30,7 @@ This will return with the list of available insights:
 
 {% include /source/json/insights_r4.md %}
 
-The most important part of this payload is the 'href' of the 'insight:spoken_topics' key. By retrieving the contents of that URI, Clarify will give you the topics recognized from the audio.
+The most important part of this payload is the <code>href</code> of the <code>insight:spoken_topics</code> key. By retrieving the contents of that URI, Clarify will give you the topics recognized from the audio.
 
 {% assign tabs="request-topics" %}
 
