tweaking the navbar name

--- a/_quickstarts/closed-captions.html
+++ b/_quickstarts/closed-captions.html
@@ -1,7 +1,7 @@
 ---
 layout: quickstart
 title: Getting Closed Captions
-navtitle: Closed Captions
+navtitle: Closed Captioning
 
 languages:
 - curl
