changing the filename to be consistent with video processing

--- a/_quickstarts/insights-keywords.html
+++ b/_quickstarts/insights-keywords.html
@@ -13,7 +13,7 @@ This quickstart demonstrates how to load an audio file and request your spoken k
 
 {% include /sections/setup.html %}
 
-{% include /sections/media-loading.html %}
+{% include /sections/loading-audio.html %}
 
 {% assign tabs="request-insights" %}
 
