--- a/_quickstarts/media-search.html
+++ b/_quickstarts/media-search.html
@@ -17,7 +17,7 @@ This quickstart demonstrates a simple way to get started using the Clarify API. 
 
 {% include /sections/setup.html %}
 
-{% include /sections/media-loading.html %}
+{% include /sections/loading-audio.html %}
 
 {% include /sections/media-searching.html %}
 
