--- a/_quickstarts/insights-topics.html
+++ b/_quickstarts/insights-topics.html
@@ -14,7 +14,7 @@ This quickstart demonstrates how to load an audio or video file and request your
 
 {% include /sections/setup.html %}
 
-{% include /sections/media-loading.html %}
+{% include /sections/loading-audio.html %}
 
 {% assign tabs="request-insights" %}
 
