--- a/quickstarts/index.html
+++ b/quickstarts/index.html
@@ -8,24 +8,29 @@ These quickstarts are designed to get you started with the Clarify API quickly. 
 <h3>Media Search</h3>
 <div class="quickstart button"><a href="/quickstarts/media-search.html">See the Code »</a></div>
 
-The Media Search Quickstart demonstates how to get started. The code samples walk you through getting a helper library, loading your first audio file, searching for a few keywords, and exploring the results.
+The Media Search Quickstart demonstates how to get started with any media. The quickstart walks you through loading your first audio or video, searching for a few keywords, and exploring the results.
 
 <h3>Multi-language Support</h3>
 <div class="quickstart button"><a href="/quickstarts/multi-language-support.html">See the Code »</a></div>
 
-The Multi-Language Quickstart demonstrates how to get started with multiple languages. The included code walks you through getting a helper library, loading a French media file, searching for a French terms, and exploring the results.
-
-<h3>Human Transcripts</h3>
-<div class="quickstart button"><a href="/quickstarts/human-transcripts.html">See the Code »</a></div>
-
-The Human Transcript Quickstart demonstrates how to take any English language audio and get a transcript. The code samples walk you through getting a helper library, loading your audio file, requesting the transcript, and receiving the results.
+The Multi-Language Quickstart demonstrates get started with multiple languages. The quickstart walks you through loading your French media, searching for a French terms, and exploring the results.
 
 <h3>Keywords Insight</h3>
 <div class="quickstart button"><a href="/quickstarts/insights-keywords.html">See the Code »</a></div>
 
-The Keyword Insight Quickstart demonstrates how to quickly extract the most frequently said words from any audio or video file. The code samples walk you through getting set up, loading your audio/video, requesting keywords, and receiving the results.
+The Keyword Insight Quickstart demonstrates how to extract the most frequently said words from any audio or video. The quickstart walks you through loading your audio/video, requesting keywords, and retrieving the results.
 
 <h3>Topics Insight</h3>
 <div class="quickstart button"><a href="/quickstarts/insights-topics.html">See the Code »</a></div>
 
-The Topics Insight Quickstart demonstrates how to quickly extract the important topics from any audio or video file. The code samples walk you through getting set up, loading your audio/video, requesting topics, and receiving the results.
+The Topics Insight Quickstart demonstrates how to quickly extract the topics from any audio or video. The quickstart walk you through loading your audio/video, requesting topics, and retrieving the results.
+
+<h3>Human Transcripts</h3>
+<div class="quickstart button"><a href="/quickstarts/human-transcripts.html">See the Code »</a></div>
+
+The Human Transcript Quickstart demonstrates how to take any English audio and get a transcript. The quickstart walks you through loading your audio, requesting the transcript, and retrieving the results.
+
+<h3>Closed Captioning</h3>
+<div class="quickstart button"><a href="/quickstarts/closed-captions.html">See the Code »</a></div>
+
+The Closed Captioning Quickstart demonstrates how to take any English video and get captions in the format of your choice. The quickstart walks you through loading your audio, requesting the captions, and retrieving the results.
