Added insights docs.

--- a/_insights/spoken_keywords.html
+++ b/_insights/spoken_keywords.html
@@ -9,7 +9,9 @@ languages:
 order: 3
 ---
 
-The Spoken Keywords insight contains a list of:
+The Spoken Keywords insight contains track-level data.
+<code>track_data</code> is an array containing an object for each track. Each object contains the <code>track_id</code> and <code>track_label</code> of the track, as well as the following:
+
 <br/>
 <br/>
 <h3>keywords</h3>
